--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,6 @@ version = "1.0"
 readme = "README.md"
 description = "tracing machinery for debugging Python programs"
 authors = [
-    { name = "Marc Donner", email = "marc.donner@gmail.com" },
+    { name = "Marc Donner", email = "marc@nygeek.net" },
     ]
 requires-python = ">=3.9"
